Fix null error if there is no expressions